--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources>
     <string name="app_name">News App</string>
     <string name="no_internet_connection">No internet connection! :(</string>
-    <string name="no_news_found">We cannot find any news at the moment.\n Maybe the website is down?\n Please wait a bit and try again!</string>
+    <string name="no_news_found">We cannot find any news at the moment.\n Maybe try another news section?</string>
     <string name="action_bar_title">Latest news from The Guardian</string>
-    <string name="date_authors_seperator">|</string>
-    <string name="author_seperator">,</string>
+    <string name="date_authors_separator">|</string>
+    <string name="author_separator">,</string>
+    <string name="no_news_http_problem">We have some problems retrieving news at the moment. Maybe the website is down? Please try again later.</string>
 </resources>
