--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,19 +3,14 @@
     <string name="no_internet_connection">No internet connection! :(</string>
     <string name="action_bar_title">Latest news from The Guardian</string>
 
-    <string name="date_authors_separator">|</string>
-    <string name="author_separator">,</string>
+    <string name="date_authors_separator">\u0020|\u0020</string>
+    <string name="author_separator">,\u0020</string>
 
     <string name="no_news_found">We cannot find any news at the moment.\n Maybe try another news section?</string>
     <string name="no_news_http_problem">We have some problems retrieving news at the moment. Maybe the website is down?\n Please try again later.\n\n HTTP error code %1$d</string>
 
     <string name="settings_menu_item">Settings</string>
     <string name="settings_title">News Settings</string>
-
-
-    <string name="settings_before_label">Show only news before</string>
-    <string name="settings_before_key" translatable="false">before</string>
-    <string name="settings_before_default" translatable="false">-</string>
 
 
     <string name="settings_section_label">News Section</string>
@@ -45,6 +40,9 @@
     <string name="settings_section_environment_value" translatable="false">environment</string>
 
 
+    <string name="settings_filter_label">Only Find News Containing</string>
+    <string name="settings_filter_key" translatable="false">filter</string>
+    <string name="settings_filter_default" translatable="false">-</string>
 
 
 </resources>
